# drone_diagnostic

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
docs/superpowers/plans/: 2026-05-10-pid-optimizer.md
docs/superpowers/specs/: 2026-05-10-pid-optimizer-design.md
drone_diagnostics/: package.xml
drone_diagnostics/config/: diagnostics_config.yaml
drone_diagnostics/drone_diagnostics/: diagnostic_node.py  diagnostics_logger_node.py
ros_diagnostics/: Dockerfile  docker-compose.yml  run.sh
ros_diagnostics/drone_diagnostics/: setup.py
ros_diagnostics/drone_diagnostics/drone_diagnostics/: diagnostics_logger_node.py
ros_diagnostics/drone_diagnostics/launch/: drone_diagnostics.launch.py
ros_diagnostics/rosbags/rosbag_logging_test/: metadata.yaml  rosbag_logging_test_0.db3
ulg_analysis/: .gitignore  docker-compose.yml  influxdb_queries.flux  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements_notebooks.txt
ulg_analysis/notebooks/: 01_ulg_explorer.ipynb  02_sysid.ipynb  03_px4_simulator.ipynb  04_ga_optimizer.ipynb  05_params_export.ipynb
ulg_analysis/pid_optimizer/: __init__.py  ga.py  gains.py  params_io.py  pid_simulator.py  plant_model.py
ulg_analysis/tests/: test_ga.py  test_gains.py  test_params_io.py  test_pid_simulator.py  test_plant_model.py
ulg_analysis/ulg_ingestor/: Dockerfile  requirements.txt  ulg_ingestor.py
