[project]
name = "ulg-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.6.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "pytest>=7.4.0",
    "pyulog>=0.9.0",
    "scipy>=1.9.0",
]
